# budgie-sys-monitor

./: .gitignore  LICENSE  README.md  meson.build
data/: SysMonitor.plugin  SysMonitor.plugin.in  style.css
po/: POTFILES  en.mo  en.po  meson.build  uk.mo  uk.po
src/: SysInfo.vala  SysMonitor.vala  SysMonitorWindow.vala
vapi/: libgtop-2.0.vapi
